--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,9 @@ label {
   padding: 8px 16px;
   gap: 8px;
   border-radius: 8px;
+  transition: border 0.2s ease;
 }
+.label__container.border {border: 1px solid #2520e3;}
 input[type="radio"] {
   accent-color: #2520e3;
 }
